--- a/src/icons/coreui-icons-free.html
+++ b/src/icons/coreui-icons-free.html
@@ -70,7 +70,7 @@
         <li class="c-sidebar-nav-title">Theme</li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="colors.html">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-drop1"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-drop"></use>
             </svg> Colors</a></li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="typography.html">
             <svg class="c-sidebar-nav-icon">
@@ -493,6 +493,9 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-bell"></i>
                       <div>cil-bell</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-bell-exclamation"></i>
+                      <div>cil-bell-exclamation</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-bike"></i>
                       <div>cil-bike</div>
                     </div>
@@ -522,6 +525,9 @@
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-bolt"></i>
                       <div>cil-bolt</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-bolt-circle"></i>
+                      <div>cil-bolt-circle</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-book"></i>
                       <div>cil-book</div>
@@ -598,6 +604,9 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-burger"></i>
                       <div>cil-burger</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-burn"></i>
+                      <div>cil-burn</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-bus-alt"></i>
                       <div>cil-bus-alt</div>
                     </div>
@@ -673,6 +682,9 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-check-alt"></i>
                       <div>cil-check-alt</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-check-circle"></i>
+                      <div>cil-check-circle</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-chevron-bottom"></i>
                       <div>cil-chevron-bottom</div>
                     </div>
@@ -699,9 +711,6 @@
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-chevron-double-up"></i>
                       <div>cil-chevron-double-up</div>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-chevron-double-up-alt"></i>
-                      <div>cil-chevron-double-up-alt</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-chevron-left"></i>
                       <div>cil-chevron-left</div>
@@ -768,6 +777,9 @@
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-columns"></i>
                       <div>cil-columns</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-command"></i>
+                      <div>cil-command</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-comment-bubble"></i>
                       <div>cil-comment-bubble</div>
@@ -868,9 +880,6 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-drop"></i>
                       <div>cil-drop</div>
                     </div>
-                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-drop1"></i>
-                      <div>cil-drop1</div>
-                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-eco"></i>
                       <div>cil-eco</div>
                     </div>
@@ -879,12 +888,6 @@
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-elevator"></i>
                       <div>cil-elevator</div>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-ellipses"></i>
-                      <div>cil-ellipses</div>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-ellipsis"></i>
-                      <div>cil-ellipsis</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-envelope-closed"></i>
                       <div>cil-envelope-closed</div>
@@ -964,6 +967,12 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-filter-photo"></i>
                       <div>cil-filter-photo</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-filter-square"></i>
+                      <div>cil-filter-square</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-filter-x"></i>
+                      <div>cil-filter-x</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-find-in-page"></i>
                       <div>cil-find-in-page</div>
                     </div>
@@ -1030,9 +1039,6 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-garage"></i>
                       <div>cil-garage</div>
                     </div>
-                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-gauge"></i>
-                      <div>cil-gauge</div>
-                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-gem"></i>
                       <div>cil-gem</div>
                     </div>
@@ -1065,6 +1071,9 @@
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-grid-slash"></i>
                       <div>cil-grid-slash</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-group"></i>
+                      <div>cil-group</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-hamburger-menu"></i>
                       <div>cil-hamburger-menu</div>
@@ -1126,14 +1135,14 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-https"></i>
                       <div>cil-https</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-image"></i>
+                      <div>cil-image</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-image-broken"></i>
                       <div>cil-image-broken</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-image-plus"></i>
                       <div>cil-image-plus</div>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-image1"></i>
-                      <div>cil-image1</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-inbox"></i>
                       <div>cil-inbox</div>
@@ -1254,6 +1263,9 @@
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-list-numbered"></i>
                       <div>cil-list-numbered</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-list-numbered-rtl"></i>
+                      <div>cil-list-numbered-rtl</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-list-rich"></i>
                       <div>cil-list-rich</div>
@@ -1387,6 +1399,9 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-newspaper"></i>
                       <div>cil-newspaper</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-note-add"></i>
+                      <div>cil-note-add</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-notes"></i>
                       <div>cil-notes</div>
                     </div>
@@ -1399,11 +1414,11 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-opacity"></i>
                       <div>cil-opacity</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-opentype"></i>
+                      <div>cil-opentype</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-options"></i>
                       <div>cil-options</div>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-options-horizontal"></i>
-                      <div>cil-options-horizontal</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-paint"></i>
                       <div>cil-paint</div>
@@ -1422,6 +1437,9 @@
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-paw"></i>
                       <div>cil-paw</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-pen"></i>
+                      <div>cil-pen</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-pen-alt"></i>
                       <div>cil-pen-alt</div>
@@ -1480,8 +1498,14 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-rectangle"></i>
                       <div>cil-rectangle</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-recycle"></i>
+                      <div>cil-recycle</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-reload"></i>
                       <div>cil-reload</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-report-slash"></i>
+                      <div>cil-report-slash</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-resize-both"></i>
                       <div>cil-resize-both</div>
@@ -1498,11 +1522,17 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-room"></i>
                       <div>cil-room</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-router"></i>
+                      <div>cil-router</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-rowing"></i>
                       <div>cil-rowing</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-rss"></i>
                       <div>cil-rss</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-ruble"></i>
+                      <div>cil-ruble</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-running"></i>
                       <div>cil-running</div>
@@ -1627,6 +1657,9 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-space-bar"></i>
                       <div>cil-space-bar</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-speak"></i>
+                      <div>cil-speak</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-speaker"></i>
                       <div>cil-speaker</div>
                     </div>
@@ -1723,6 +1756,9 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-toggle-off"></i>
                       <div>cil-toggle-off</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-toggle-on"></i>
+                      <div>cil-toggle-on</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-toilet"></i>
                       <div>cil-toilet</div>
                     </div>
@@ -1750,6 +1786,9 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-underline"></i>
                       <div>cil-underline</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-usb"></i>
+                      <div>cil-usb</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-user"></i>
                       <div>cil-user</div>
                     </div>
@@ -1759,8 +1798,14 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-user-follow"></i>
                       <div>cil-user-follow</div>
                     </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-user-plus"></i>
+                      <div>cil-user-plus</div>
+                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-user-unfollow"></i>
                       <div>cil-user-unfollow</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-user-x"></i>
+                      <div>cil-user-x</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-vector"></i>
                       <div>cil-vector</div>
@@ -1768,23 +1813,17 @@
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-vertical-align-bottom"></i>
                       <div>cil-vertical-align-bottom</div>
                     </div>
-                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-vertical-align-bottom1"></i>
-                      <div>cil-vertical-align-bottom1</div>
-                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-vertical-align-center"></i>
                       <div>cil-vertical-align-center</div>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-vertical-align-center1"></i>
-                      <div>cil-vertical-align-center1</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-vertical-align-top"></i>
                       <div>cil-vertical-align-top</div>
                     </div>
-                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-vertical-align-top1"></i>
-                      <div>cil-vertical-align-top1</div>
-                    </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-video"></i>
                       <div>cil-video</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-videogame"></i>
+                      <div>cil-videogame</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-view-column"></i>
                       <div>cil-view-column</div>
@@ -1797,6 +1836,9 @@
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-view-stream"></i>
                       <div>cil-view-stream</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-voice"></i>
+                      <div>cil-voice</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-voice-over-record"></i>
                       <div>cil-voice-over-record</div>
@@ -1842,6 +1884,9 @@
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-wifi-signal-2"></i>
                       <div>cil-wifi-signal-2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-wifi-signal-3"></i>
+                      <div>cil-wifi-signal-3</div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-2"><i class="c-icon c-icon-2xl mt-5 mb-2 cil-wifi-signal-4"></i>
                       <div>cil-wifi-signal-4</div>
