--- a/src/base/forms.html
+++ b/src/base/forms.html
@@ -69,7 +69,7 @@
         <li class="c-sidebar-nav-title">Theme</li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="colors.html">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-drop1"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-drop"></use>
             </svg> Colors</a></li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="typography.html">
             <svg class="c-sidebar-nav-icon">
