refactor: v4 initial release

--- a/src/500.html
+++ b/src/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v3.4.0
+* @version v4.0.0-alpha.0
 * @link https://coreui.io
 * Copyright (c) 2020 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
@@ -56,7 +56,7 @@
       <div class="row justify-content-center">
         <div class="col-md-6">
           <div class="clearfix">
-            <h1 class="float-left display-3 mr-4">500</h1>
+            <h1 class="float-start display-3 mr-4">500</h1>
             <h4 class="pt-3">Houston, we have a problem!</h4>
             <p class="text-muted">The page you are looking for is temporarily unavailable.</p>
           </div>
@@ -73,8 +73,5 @@
     </div>
     <!-- CoreUI and necessary plugins-->
     <script src="node_modules/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
-    <!--[if IE]><!-->
-    <script src="node_modules/@coreui/icons/js/svgxuse.min.js"></script>
-    <!--<![endif]-->
   </body>
 </html>
