--- a/src/register.html
+++ b/src/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v3.4.0
+* @version v4.0.0-alpha.0
 * @link https://coreui.io
 * Copyright (c) 2020 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6">
-          <div class="card mx-4">
+          <div class="card mb-4 mx-4">
             <div class="card-body p-4">
               <h1>Register</h1>
               <p class="text-muted">Create your account</p>
@@ -105,8 +105,5 @@
     </div>
     <!-- CoreUI and necessary plugins-->
     <script src="node_modules/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
-    <!--[if IE]><!-->
-    <script src="node_modules/@coreui/icons/js/svgxuse.min.js"></script>
-    <!--<![endif]-->
   </body>
 </html>
